@startuml class_diagram
'https://plantuml.com/class-diagram

legend top left
    Project
        BI_JAVA_AWS
    Diagram
        Class
    Authors
        Yannick Baudraz
        Anthony Bouillant
endlegend

package BI_JAVA_AWS {
    interface DataObject {
        + doesExist(objectKey: String) : boolean
        + createObject(path: Path, objectKey: String = null) : void
        + downloadObject(key: String) : byte[]
        + publishObject(key: String) : URL
        + deleteObject(objectKey: String, isRecursive: boolean = false) : void
    }

    class DataObjectImpl {
        - s3Client: S3Client
        - bucketName: String
    }

    class ObjectAlreadyExistsException {
        + ObjectAlreadyExistsException(objectKey: String)
    }

    class ObjectNotFoundException {
        + ObjectNotFoundException(objectKey: String)
    }
}

class Exception

class IOException {
    + IOException()
}

interface S3Client

DataObject <|.. DataObjectImpl

DataObjectImpl ..> ObjectAlreadyExistsException : throws
DataObjectImpl ..> ObjectNotFoundException : throws
DataObjectImpl ..> IOException : throws

ObjectAlreadyExistsException --|> Exception
ObjectNotFoundException --|> Exception
IOException --|> Exception

DataObjectImpl *- S3Client

@enduml